# MultisetAgent

./: README.md
multisetCheckModule/: CMakeLists.txt  MultisetCheckModule.cpp  MultisetCheckModule.hpp
multisetCheckModule/agents/: LogicalClassificator.cpp  LogicalClassificator.hpp  SetParser.cpp  SetParser.hpp
multisetCheckModule/keynodes/: keynodes.cpp  keynodes.hpp
scg_structures/: input_structure.gwf  request_example.gwf  rules_set.gwf  target_template.gwf
